<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_replace"
        android:title="@string/replace"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_increase_font"
        android:title="@string/increase_font"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decrease_font"
        android:title="@string/decrease_font"
        app:showAsAction="never" />

</menu>
